Archive2/5d/871a1bcac885dc/output
g++ (GCC) 4.9.0
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In function 'S f()':
main.cpp:12:12: error: could not convert '(float*)(& v)' from 'float*' to 'S'
     return v;
            ^
main.cpp:13:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
