Archive2/5d/871a1bcac885dc/main.cpp
struct S
{
    S(const float(&)[12])
    {
    }
};

float v[12];

S f()
{
    return v;
}

int main()
{
}
